tests/std/negative/io/ConsolePrintlnRejectsIntTest.terl
module std.negative.io.ConsolePrintlnRejectsIntTest.

@test
pub console_println_rejects_int(): Bool ->
    std.io.Console.println(1) == Unit.
